# no-johnson-adventures

./: .gitignore  CMakeLists.txt  config_level.json  custom_level copy.json  custom_level.json  ranking.txt  readme.md  tempo  tempos.txt
include/: ente.hpp  game.hpp
include/entities/: entity.hpp
include/entities/characters/: character.hpp  player.hpp  player1.hpp
include/entities/characters/enemies/: bat.hpp  big_nose.hpp  enemy.hpp  minotaur.hpp
include/entities/item/: item.hpp  melee.hpp  potion.hpp  projectile.hpp  shield.hpp
include/entities/obstacles/: bush.hpp  fire.hpp  obstacle.hpp  platform.hpp  wall.hpp
include/levels/: custom_level.hpp  level.hpp  level1.hpp  level2.hpp  test_level.hpp
include/lists/: circular.hpp  entities.hpp  texture.hpp
include/managers/: colision_manager.hpp  event_handler.hpp  graphic_manager.hpp
include/ui/: background_manager.hpp  button.hpp  menu.hpp  player_menu.hpp  ranking.hpp
include/utils/: ente.hpp  state.hpp
src/: ente.cpp  game.cpp  main.cpp
src/entities/: entity.cpp
src/entities/characters/: character.cpp  player.cpp  player1.cpp
src/entities/item/: item.cpp  melee.cpp  potion.cpp  projectile.cpp  shield.cpp
src/entities/obstacles/: bush.cpp  fire.cpp  obstacle.cpp  platform.cpp  wall.cpp
src/levels/: custom_level.cpp  level.cpp  level1.cpp  level2.cpp  test_level.cpp
src/managers/: colision_manager.cpp  event_handler.cpp  graphic_manager.cpp
src/ui/: background_manager.cpp  button.cpp  menu.cpp  player_menu.cpp  ranking.cpp
src/utils/: ente.cpp  state.cpp
(+12 files in other folders)
